# learning-distributed-system

./: .gitignore  README.md  how-to-learn-with-ai.md  pyproject.toml
.claude/: CLAUDE.md
output_templates/: output_template_layer_0.md  output_template_layer_1.md  output_template_meta.md
skills/: _index.md
skills/storage/durability-contract/2026-01-11-fsync-failure-contract/: layer_0.md  layer_1.md  meta.md
skills/storage/record-framing/2026-01-11-length-prefix-framing/: layer_0.md  layer_1.md  meta.md
skills/storage/wal/2026-01-11-write-ahead-log-kvstore/: layer_0.md  layer_1.md  meta.md
write-ahead-log/: Makefile  __init__.py  crash_test_worker.py  kv_store.py  plan.md  test-guide.md  test_crash_scenario.py  test_kv_store.py  test_wal.py  test_wal_record.py  wal.py  wal_record.py
write-ahead-log/docs/: crash-test-limitations.md  debugging-lesson-checksum-newline.md  plan-revision-wal-atomicity.md
write-ahead-log/scripts/: demo_concurrent_rollback_truncation.py
write-ahead-log/src/: crash_test_worker.py  kv_store.py  wal.py  wal_record.py
write-ahead-log/tests/: test_crash_scenario.py  test_kv_store.py  test_wal.py  test_wal_record.py
