[project]
name = "learning-distributed-patterns"
version = "0.1.0"
description = "Learning distributed system patterns through implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*", "should_*"]
